add tests suite change error handling
